k8s-manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudshop-worker
  namespace: default
  labels:
    app: cloudshop-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudshop-worker
  template:
    metadata:
      labels:
        app: cloudshop-worker
    spec:
      containers:
      - name: worker
        image: cloudshop-worker:latest   # <-- UPDATE to ECR URL after pushing
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "250m"
